Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -159,7 +159,7 @@
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Data di nascita",
     "birthday": "Compleanno",
-    "block-date": "Block date",
+    "block-date": "Data di blocco",
     "blocked": "bloccato",
     "blocked-date": "Bloccato a",
     "body": "Corpo",
@@ -350,7 +350,7 @@
     "customer-commission-info": "customer-commission-info",
     "customer-delivery-note": "Customer delivery note",
     "customer-delivery-notes": "Customer delivery notes",
-    "customer-estimation": "Customer estimation",
+    "customer-estimation": "Estimazione cliente",
     "customer-estimations": "Stime del cliente",
     "customer-group": "Gruppo di clienti",
     "customer-groups": "Gruppi di clienti",
@@ -383,7 +383,7 @@
     "date-of-the-document": "Data di nascita",
     "date-out": "Data di uscita",
     "date-out-of-exercise-range": "Data dall'intervallo di eccitazione 0",
-    "date-wildcard-info": "Current date (computer date)",
+    "date-wildcard-info": "Data attuale (data del computer)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "giorno",
     "days": "days",
@@ -397,7 +397,7 @@
     "db-type-not-recognized": "Connessione di tipo di database non riconosciuta. Deve essere MySQL o PostgreSQL",
     "db-user": "Database utenti",
     "debit": "Debit",
-    "debug-mode": "Debug mode",
+    "debug-mode": "Modalità debug",
     "december": "Dicembre",
     "decimal-separator": "Decimale",
     "decimals": "Decimali",
@@ -653,7 +653,7 @@
     "free": "Gratuito",
     "friday": "friday",
     "from": "from",
-    "from-accounting-entry": "from-accounting-entry",
+    "from-accounting-entry": "dall'ingresso in contabilità",
     "from-date": "from-date",
     "from-subaccount": "from-subaccount",
     "full-access": "full-access",
@@ -674,7 +674,7 @@
     "generated-accounting-entries": "0 voci di contabilità generate.",
     "generated-accounts": "0 account generati.",
     "generated-agents": "0 agenti generati.",
-    "generated-at": "Generated at %when%",
+    "generated-at": "Generato il %when%",
     "generated-contacts": "generated-contacts",
     "generated-customer-delivery-notes": "0 ha generato note di consegna del cliente.",
     "generated-customer-estimations": "0 stime dei clienti generate.",
@@ -747,7 +747,7 @@
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
     "impacted-tax-subaccount": "Subconto imposta impattata",
     "import": "import",
-    "import-accounting-plan": "Import accounting plan",
+    "import-accounting-plan": "Importa piano contabile",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Importare file",
     "in-progress": "En progreso",
@@ -759,7 +759,7 @@
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Informazioni",
     "infostate-component-title": "Status Information",
-    "initial-number": "initial-number",
+    "initial-number": "numero iniziale",
     "insert-update": "Añadir o modificar",
     "installed": "installed",
     "installed-plugins": "installed-plugins",
@@ -819,7 +819,7 @@
     "journals": "Journals",
     "july": "Luglio",
     "june": "Giugno",
-    "justified": "justified",
+    "justified": "giustificato",
     "key-google-maps": "Clave de Google Maps",
     "keys": "keys",
     "lang-code": "Codice della lingua",
@@ -921,11 +921,11 @@
     "main-address": "Indirizzo principale",
     "manage": "gestire",
     "manage-installation": "Gestire",
-    "manual": "manual",
+    "manual": "manuale",
     "manufacturer": "fabbricante",
     "manufacturer-code": "Codice produttore",
     "manufacturers": "Produttori",
-    "march": "Marzo",
+    "march": "marzo",
     "margin": "margine",
     "margin-top": "Margine superiore",
     "mark-as-homepage": "Segna come homepage",
@@ -995,13 +995,13 @@
     "name": "Nombre",
     "name-or-business-name": "Name or Bussine name",
     "nature": "Natura",
-    "need-help-password": "need-help-password",
+    "need-help-password": "necessita aiuto con la password",
     "negative-balance": "negative-balance",
     "net": "Netto",
     "new": "Nuovo",
     "new-acc-entry-line-p": "Puoi inserire una linea scrivendo il codice della sottoconto qui sotto o premendo il pulsante sottoconti e selezionando un sottoconto.",
     "new-address": "Nuova traduzione",
-    "new-customer": "new customer",
+    "new-customer": "cliente nuovo",
     "new-customers": "nuovi-clienti",
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
@@ -1024,7 +1024,7 @@
     "no-stock": "Nessun stock",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colonna non modificabile: %columns%",
-    "non-editable-document": "Non editable document",
+    "non-editable-document": "Documento non modificabile",
     "none": "None",
     "normal": "normal",
     "not-allowed-delete": "not-allowed-delete",
@@ -1141,7 +1141,7 @@
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "php-support-end",
     "physical-stock": "Stock fisico",
-    "picking": "Picking",
+    "picking": "Selezione",
     "plan": "Piano",
     "please-enter-value": "Per favore inserisci un valore",
     "plugin": "plug-in",
@@ -1167,7 +1167,7 @@
     "points-of-interest": "Punti di interesse",
     "port": "Puerto",
     "position": "Posizione",
-    "positive-balance": "positive-balance",
+    "positive-balance": "saldo positivo",
     "post-office-box": "lettera",
     "postgresql": "PostgreSQL",
     "precio": "Prezzo",
@@ -1195,7 +1195,7 @@
     "printing-formats": "Formati di stampa",
     "priority": "priorità",
     "private": "privato",
-    "private-key": "Clave privada",
+    "private-key": "Chiave privata",
     "process": "Proceso",
     "processing": "elaborazione",
     "product": "Prodotto",
@@ -1248,7 +1248,7 @@
     "record-updated-correctly": "Registro aggiornato correttamente!",
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "rectified-invoice",
-    "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoice-p": "Le fatture sono documenti commerciali e hanno una serie di restrizioni legali. Non possono essere eliminate o modificate. Sono ammesse solo restituzioni totali o parziali. Utilizzare questo modulo per eseguire un reso su questa fattura.",
     "rectified-invoices": "Fatture correttive",
     "rectifying": "Rectificativa",
     "rectifying-serie": "rectifying-serie",
@@ -1368,7 +1368,7 @@
     "settings": "Ajustes",
     "settlement": "Liquidazione",
     "settlement-product": "settlement-product",
-    "settlements": "settlements",
+    "settlements": "regolamenti",
     "setup-options": "Opzioni di installazione",
     "shipping": "Spedizione",
     "shipping-address": "Indirizzo di spedizione",
@@ -1477,7 +1477,7 @@
     "suppliers": "fornitori",
     "support": "Supporto",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
-    "supported-tax-subaccount": "supported-tax-subaccount",
+    "supported-tax-subaccount": "Sottocount tasse supportate",
     "surcharge": "Sovraccarico",
     "surname": "cognomi",
     "suspended": "Sospeso",
