--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -708,7 +708,7 @@
     "group-more-docs-p": "Si lo deseas puedes agrupar junto a otros documentos de este cliente\/proveedor",
     "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o partir",
-    "group-or-split-p": "Este asistente permite generar un nuevo documento a partir de las líneas de otros. Seleccione las cantidades que desea usar, la fecha del nuevo documento y pulse el botón generar.",
+    "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
     "has-attachments": "Ma załączniki",
@@ -1449,7 +1449,7 @@
     "subtract": "Restar",
     "success": "Éxito",
     "sum": "Suma",
-    "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
+    "sum-netos-line-tax-must-be": "Suma netto linii podatku musi wynosić: %lineNet%",
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
     "summary": "Resumen",
     "sums-and-balances": "Sumas y saldos",
