--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -202,7 +202,7 @@
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea",
-    "cant-load-controller": "Não é possível carregar o controlador.",
+    "cant-load-controller": "Não é possível carregar o controlador '%controllerName%'.",
     "cant-modify-reference": "Não pode editar a referência.",
     "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
     "cant-remove-invoice-refund": "Não é possível remover uma fatura que já possui devolução",
@@ -216,7 +216,7 @@
     "category": "Categoria",
     "cc": "CC",
     "center": "Center",
-    "change": "mudança",
+    "change": "mudar",
     "channel": "channel",
     "charge-date": "Data de cobrança",
     "chart": "Chart",
@@ -227,7 +227,7 @@
     "checked": "Checado",
     "children": "Criança",
     "children-accounts": "Children Accounts",
-    "choose-currency": "Choose currency",
+    "choose-currency": "Escolha a moeda",
     "choose-doc-type": "Escolher o tipo de documento",
     "choose-employee": "Choose employee",
     "choose-files": "Escolher arquivos",
@@ -239,13 +239,13 @@
     "city": "Cidade",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
     "clone": "Clone",
-    "clone-account-entry": "Duplicate the accounting entry",
+    "clone-account-entry": "Duplicar a entrada contábil",
     "close": "Fechar",
     "close-box": "Fechar caixa",
     "close-exercise": "cerrar-ejercicio",
     "closed": "Closed",
     "closed-exercise": "O exercício 0 está fechado.",
-    "closed-exercise-cant-change-date": "O exercício 0 está fechado. Você não pode mudar a data.",
+    "closed-exercise-cant-change-date": "O exercício %exerciseName% está fechado. Não é possível alterar a data.",
     "closing-accounting-completed": "cierre-contable-completado",
     "closing-closing-concept": "concepto-de-cierre",
     "closing-opening-concept": "concepto-de-apertura",
@@ -376,7 +376,7 @@
     "data-source": "Origin data",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
-    "database-name-must-be-lowercase": "database-name-must-be-lowercase",
+    "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
     "date-of-suspension": "Date of suspension",
@@ -457,14 +457,14 @@
     "disable": "Desativar",
     "disable-plugins": "Desativar plugins",
     "disabled": "Desativado",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
     "display": "Display",
     "display-date": "Data de exibição",
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "não-agrupar",
-    "do-nothing": "Do nothing",
+    "do-nothing": "Não fazer nada",
     "doc-type": "Document type",
     "document": "Documento",
     "document-configuration": "document-configuration",
@@ -499,7 +499,7 @@
     "edit": "Editar",
     "editable": "Editable",
     "email": "O email",
-    "email-bcc": "Email Blind Carbon Copy",
+    "email-bcc": "Cópia oculta do email",
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "e",
     "email-not-sent": "Not sent",
@@ -524,7 +524,7 @@
     "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "ativado",
     "enabled-plugins": "Plugins ativados",
-    "encrypt": "Encrypt",
+    "encrypt": "Criptografia",
     "end-date": "Data final",
     "end-time": "hora-final",
     "epigraph": "Epígrafe",
@@ -547,7 +547,7 @@
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
-    "es_EC": "es_EC",
+    "es_EC": "Espanhol (Equador)",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -666,7 +666,7 @@
     "generate-accounting-entries": "Gerar lançamentos contábeis",
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Generate document type",
-    "generate-invoice": "generate-invoice",
+    "generate-invoice": "Gerar fatura",
     "generate-receipts": "generate-receipts",
     "generate-settlements": "generate-settlements",
     "generate-test-data": "Gerar dados de teste",
@@ -685,13 +685,13 @@
     "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "0 fabricantes gerados.",
     "generated-products": "0 produtos gerados.",
-    "generated-subaccounts": "0 sub-contas geradas.",
+    "generated-subaccounts": "%quantity% subcontas geradas.",
     "generated-supplier": "0 fornecedor gerado.",
-    "generated-supplier-delivery-notes": "0 notas de entrega do fornecedor geradas.",
+    "generated-supplier-delivery-notes": "%quantity% notas de entrega do fornecedor geradas.",
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
     "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
     "global-dto": "global-dto",
-    "global-dto-2": "global-dto-2",
+    "global-dto-2": "Dto global 2",
     "greater-than": "Melhor que",
     "grid-help": "grid-help",
     "group": "Grupo",
@@ -737,7 +737,7 @@
     "https": "HTTPS",
     "i-forgot-password": "esqueci-senha",
     "iban": "IBAN",
-    "icon": "icon",
+    "icon": "ícone",
     "id": "Id.",
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
@@ -745,7 +745,7 @@
     "images": "Imagens",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subconta de imposto impactado repercutido",
-    "impacted-tax-subaccount": "impacted-tax-subaccount",
+    "impacted-tax-subaccount": "Subconta de imposto impactado",
     "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contábil padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
@@ -872,7 +872,7 @@
     "level-cost-sales": "Nível para visualizar custos",
     "level1": "Level 1",
     "level2": "Level 2",
-    "level3": "Level 3",
+    "level3": "Nível 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
     "library": "library",
@@ -895,8 +895,8 @@
     "login": "Entrar",
     "login-cookie-fail": "O cookie da sessão falhou",
     "login-image": "Imagen de login",
-    "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
-    "login-password-fail": "Falha na autenticação",
+    "login-ok": "Login bem-sucedido (cookie). Usuário: '%nick%'",
+    "login-password-fail": "Usuário ou senha incorretos",
     "login-text": "Entrar",
     "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
@@ -916,7 +916,7 @@
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
-    "mail-test-ok": "Satisfactory email proof",
+    "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
     "manage": "manage",
@@ -937,12 +937,12 @@
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
     "mega-search": "MegaBuscador",
-    "memcache": "Memcache 0",
+    "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpo.",
     "memcache-delete-key-item": "Elemento excluído '0' do Memcache.",
     "memcache-get-key-item": "Obtém o elemento '0' do Memcache.",
     "memcache-host": "Host Memcache",
-    "memcache-port": "Porta Memcache",
+    "memcache-port": "Porta do Memcache",
     "memcache-prefix": "Prefixo Memcache",
     "memcache-set-key-item": "Elemento configurado '0' para Memcache.",
     "menu": "Cardápio",
@@ -1023,7 +1023,7 @@
     "no-selected-item": "no-selected-item",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
-    "non-editable-columns": "non-editable-columns",
+    "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
     "none": "Nenhum",
     "normal": "normal",
@@ -1098,7 +1098,7 @@
     "paid-receipts-prevent-action": "Recibos pagos impedem a ação",
     "parent": "Pai",
     "parent-account": "Conta Pai",
-    "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
+    "parent-family-cant-be-child": "A família pai não pode ser a mesma que a filha.",
     "parent-group": "Grupo Pai",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
@@ -1116,7 +1116,7 @@
     "payment-days": "Dias de pagamento",
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de Pagamento",
-    "payments": "payments",
+    "payments": "Pagamentos",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
@@ -1164,11 +1164,11 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "points",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Pontos de interesse",
     "port": "Porta",
     "position": "Posição",
     "positive-balance": "Saldo positivo",
-    "post-office-box": "Correio postal",
+    "post-office-box": "Caixa postal",
     "postgresql": "PostgreSQL",
     "precio": "Prive",
     "predefined-concepts": "Predefined Concepts",
@@ -1256,7 +1256,7 @@
     "reference": "Referência",
     "reference+description": "Reference + Description",
     "refresh": "Atualizar",
-    "refresh-page": "Atualizar a página",
+    "refresh-page": "Atualizar página",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
@@ -1459,7 +1459,7 @@
     "supplied-subaccount-not-found": "supplied-subaccount-not-found",
     "supplier": "Fornecedor",
     "supplier-account-not-found": "supplier-account-not-found",
-    "supplier-code": "supplier-code",
+    "supplier-code": "Código do fornecedor",
     "supplier-delivery-note": "Nota de Entrega de Fornecedor",
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
     "supplier-estimation": "Estimativa de Fornecedor",
@@ -1598,7 +1598,7 @@
     "user-and-config": "Usuario y configuración",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
-    "using-filecache": "Usando Filecache",
+    "using-filecache": "Usando o Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
@@ -1654,7 +1654,7 @@
     "wizard-p": "wizard-p",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
-    "working-hours": "Horario de trabajo",
+    "working-hours": "Horário de trabalho",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "x-operation",
@@ -1674,6 +1674,6 @@
     "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "zip-error-wrong-structure"
 }
