--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -376,7 +376,7 @@
     "data-source": "Origin data",
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
-    "database-name-must-be-lowercase": "database-name-must-be-lowercase",
+    "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
     "date-of-suspension": "Date of suspension",
@@ -499,7 +499,7 @@
     "edit": "Editar",
     "editable": "Editable",
     "email": "O email",
-    "email-bcc": "Email Blind Carbon Copy",
+    "email-bcc": "Cópia oculta do email",
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "e",
     "email-not-sent": "Not sent",
@@ -524,7 +524,7 @@
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "ativado",
     "enabled-plugins": "Plugins activos",
-    "encrypt": "Encrypt",
+    "encrypt": "Criptografia",
     "end-date": "Data final",
     "end-time": "end-time",
     "epigraph": "Epígrafe",
@@ -737,7 +737,7 @@
     "https": "HTTPS",
     "i-forgot-password": "i-forgot-password",
     "iban": "IBAN",
-    "icon": "icon",
+    "icon": "ícone",
     "id": "Identidade.",
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
@@ -872,7 +872,7 @@
     "level-cost-sales": "Nivel para ver costes",
     "level1": "Level 1",
     "level2": "Level 2",
-    "level3": "Level 3",
+    "level3": "Nível 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
     "library": "library",
@@ -916,7 +916,7 @@
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "mail-test-error",
-    "mail-test-ok": "Satisfactory email proof",
+    "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
     "manage": "manage",
@@ -1164,7 +1164,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "points",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Pontos de interesse",
     "port": "Porta",
     "position": "Posição",
     "positive-balance": "Saldo positivo",
@@ -1674,6 +1674,6 @@
     "you-should-change-passwd": "deveria-mudar-senha",
     "your": "your",
     "zip-code": "Código postal",
-    "zip-codes": "Códigos postales",
+    "zip-codes": "Códigos postais",
     "zip-error-wrong-structure": "zip-error-wrong-structure"
 }
