--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -869,7 +869,7 @@
     "left": "Esquerra",
     "level": "Nivell",
     "level-benefit-sales": "Nivell per veure beneficis",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-cost-sales": "Nivell per veure costos",
     "level1": "Nivell 1",
     "level2": "Nivell 2",
     "level3": "Nivell 3",
@@ -914,7 +914,7 @@
     "machine": "Màquina",
     "machines": "Màquines",
     "macro-account-note-info": "Còdics per a la substitució per valors",
-    "mail-server-error": "Error al conectar al servidor de correo",
+    "mail-server-error": "Error en connectar amb el servidor de correu",
     "mail-test-error": "Erro en la prova d'email",
     "mail-test-ok": "La prova del correu s'ha eixecutat correctament.",
     "mailer": "Controlador de correu",
@@ -1266,7 +1266,7 @@
     "register-symbol": "#",
     "registered-installation": "Instalació registrada en el número #%number%",
     "registered-installation-p": "Esta instal·lació ja ha sigut registrada.",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Regularització",
     "reject": "Rechazar",
     "rejected": "Rebutjat",
     "related": "related",
@@ -1298,7 +1298,7 @@
     "reserved": "Reservat",
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
-    "respond": "Responder",
+    "respond": "Respondre",
     "restore": "Restaurar",
     "restore-data": "Restaurar senyes",
     "result": "Resultat",
@@ -1360,7 +1360,7 @@
     "serie": "Série",
     "serieb": "Sèrie B",
     "serier": "Sèrie R",
-    "serierb": "Serie RB",
+    "serierb": "Sèrie RB",
     "series": "Séries",
     "server": "Servidor",
     "service": "Servici",
